Removed third party decoder