@@ -1,7 +1,5 @@
 package nl.iprwc.utils;
 
-import sun.misc.BASE64Decoder;
-
 import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.image.BufferedImage;
@@ -91,8 +89,10 @@ public class BaseImageTranslator {
             // create a buffered image
             BufferedImage image = null;
 
-            BASE64Decoder decoder = new BASE64Decoder();
-            imageByte = decoder.decodeBuffer(base64Image);
+//            DEPRICATED
+//            BASE64Decoder decoder = new BASE64Decoder();
+//            imageByte = decoder.decodeBuffer(base64Image);
+            imageByte = Base64.getDecoder().decode(base64Image);
             ByteArrayInputStream bis = new ByteArrayInputStream(imageByte);
             image = ImageIO.read(bis);
             bis.close();
